ODROID-N2/C4/HC: arm64/dts: remove property 'resets' and 'reset-names'
Having this properties in the node 'ethmac', it does cause to load wrong
MAC address.

Signed-off-by: Dongjin Kim <tobetter@gmail.com>
Change-Id: Ifca39bb60d4cbb6586ef9a8789f6dd243352dc1e

--- a/arch/arm64/boot/dts/amlogic/meson64_odroidc4.dts
+++ b/arch/arm64/boot/dts/amlogic/meson64_odroidc4.dts
@@ -37,6 +37,11 @@
 	};
 };
 
+&ethmac {
+	/delete-property/	resets;
+	/delete-property/	reset-names;
+};
+
 &vddcpu {
 	regulator-max-microvolt = <1030000>;
 };
